--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -69,11 +69,10 @@ $background-dark: #403F48;
 
 }
 .progress .skill {
-  
-
   padding: 0;
   margin: 0 0 0 20px;
   text-transform: uppercase;
+  font-weight: 500;
 }
 .progress .skill .val {
   float: right;
