not wrongly display following

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -179,7 +179,7 @@
 						<tbody>
 							<!-- FIXME - to find top 5 followers by today_playtime -->
 							<!-- current_user <=> User.last -->
-							<% followers = current_user.followers.first(5) %>
+							<% followers = current_user.followers.where(status: true).first(5) %>
 							<% followers.each do |follower| %>
 								<% user = @users.find(follower.follower_id) %>
 								<tr>
