fix view all article button

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -363,6 +363,10 @@ tr:nth-child(odd) {
     padding-left:35%;
 }
 
+#article_name h3 {
+    width:100px;
+}
+
 #all_article {
     padding: 18px 0 0 25%;
 }
