--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -152,7 +152,7 @@
 
       <!-- About Me -->
       <div id="about_me" class="tab-pane fade background-color-div">
-        <% if @user.about %>
+        <% unless @user.about.empty? %>
           <p class="about_me_content"><%= @user.about %></p>
         <% else %>
           <p class="about_me_content">Tell something about yourself.</p>
