--- a/app/views/new_age/_header.html.erb
+++ b/app/views/new_age/_header.html.erb
@@ -5,7 +5,7 @@
         <div class="header-content">
           <div class="header-content-inner">
             <h1>SmartGamer is an app that rewards you for playing, and optimizes your gaming time.</h1>
-            <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+            <%= link_to "Start Now for Free!", '/auth/steam', class: "btn btn-outline btn-xl page-scroll" %>
           </div>
         </div>
     </div>
