--- a/app/views/new_age/_navigation.html.erb
+++ b/app/views/new_age/_navigation.html.erb
@@ -5,20 +5,25 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
+      <%= image_tag 'smart-logo-landing.png', class: "smart-logo pull-left" %>
       <a class="navbar-brand page-scroll" href="#page-top">SmartGamer</a>
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="">
-            <a class="page-scroll" href="#download">Download</a>
+            <a class="page-scroll" href="#download">How it works</a>
         </li>
         <li class="">
             <a class="page-scroll" href="#features">Features</a>
         </li>
         <li class="">
-            <a class="page-scroll" href="#contact">Contact</a>
+            <%= link_to "Sign in with steam", '/auth/steam', class: "navbar-title nav-text" %>
+        </li>
+        <li class="">
+          <%= image_tag('steam-icon-large.png', class: "steam_log_in pull-right")%>
         </li>
       </ul>
     </div>
