--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     
 		<div class="navbar-header flex ">
       <%= image_tag 'smart-logo.png', class: "smart-logo navbar-logo"%>
-      <%= link_to "Smartgamer", root_path, class: "navbar-logo nav-text navbar-title" %>
+      <%= link_to "Smartgamer", index_path, class: "navbar-logo nav-text navbar-title" %>
       
       <!-- Searchbar -->
       <div id="custom-search-input">
