--- a/app/views/new_age/_cta.html.erb
+++ b/app/views/new_age/_cta.html.erb
@@ -2,7 +2,8 @@
   <div class="cta-content">
     <div class="container">
       <h2>Play Smart.<br>Not Hard.</h2>
-      <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+      
+      <%= link_to "Let's Get Started!", '/auth/steam', class: "btn btn-outline btn-xl page-scroll" %>
     </div>
   </div>
   <div class="overlay"></div>
