--- a/app/views/new_age/_download.html.erb
+++ b/app/views/new_age/_download.html.erb
@@ -13,24 +13,24 @@
             <span class="fa-stack fa-4x">
               <img src="/assets/new_age/steam-icon-large.png" alt="Steam logo" id="steam-large">
             </span>
-            <h3 class="service-heading">Step 1</h4>
-            <p class="text-muted">Sign into SmartGamer with your steam account.</p>
+            <h3 class="service-heading" id="service-head-text">Step 1</h4>
+            <p >Sign into SmartGamer with your steam account.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-gradient"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h3 class="service-heading">Step 2</h4>
-            <p class="text-muted">Schedule and choose your desired playtime for the day/week.</p>
+            <h3 class="service-heading" id="service-head-text">Step 2</h4>
+            <p>Schedule and choose your desired playtime for the day/week.</p>
           </div>  
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-gradient"></i>
               <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
             </span>
-            <h3 class="service-heading">Step 3</h4>
-            <p class="text-muted">Level up and earn badges to share with your friends.</p>
+            <h3 class="service-heading" id="service-head-text">Step 3</h4>
+            <p>Level up and earn badges to share with your friends.</p>
           </div>
         </div>
       </div>
