--- a/app/views/new_age/_features.html.erb
+++ b/app/views/new_age/_features.html.erb
@@ -1,60 +1,88 @@
-<section id="features" class="features">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <div class="section-heading">
+<section id="features">
+<div class="section-heading">
           <h2>Learn to play the smart way</h2>
           <p class="text-muted">Check out what you can do!</p>  
 
           <hr>
 
         </div>
-      </div>
+<div id="feature-div">
+
+  <div class="feature-card">
+      <%= image_tag "achievement-feature.png" %>
+      <div class="content">
+        <div>
+          <p class="content-header">Achievements</p>
+      
     </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="device-container">
-          <div class="device-mockup iphone6_plus portrait white">
-            
-            </div>
+          <div>
+            <p class="content-description">Earn achievements for gaming the smart way.</p>
           </div>
-        </div>
-        <div class="col-md-8">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="feature-item">
-                  <i class="glyphicon glyphicon-phone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="feature-item">
-                  <i class="glyphicon glyphicon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="feature-item">
-                  <i class="glyphicon glyphicon-gift text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="feature-item">
-                  <i class="glyphicon glyphicon-lock text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
+  </div>
+  <div class="feature-card">
+      <%= image_tag "article-feature.png" %>
+      <div class="content">
+        <div>
+          <p class="content-header">Articles</p>
+      
+    </div>
+          <div>
+            <p class="content-description">Read articles curated on our blog to stay motivated.</p>
+          </div>
+    </div>
+  </div>
+  <div class="feature-card">
+      <%= image_tag "commendation-feature.png" %>
+      <div class="content">
+        <div>
+          <p class="content-header">Commendations</p>
+      
+    </div>
+          <div>
+            <p class="content-description">Commend other players to let them know they were fun to play with.</p>
+          </div>
+    </div>
+  </div>
+  <div class="feature-card">
+      <%= image_tag "graph-feature.png" %>
+      <div class="content">
+        <div>
+          <p class="content-header">Statistics</p>
+      
+    </div>
+          <div>
+            <p class="content-description">See exactly how much time you spend gaming. At a glance see the trends of your gaming history.</p>
+          </div>
+    </div>
+  </div>
+  <div class="feature-card">
+      <%= image_tag "top-5-feature.png" %>
+      <div class="content">
+        <div>
+          <p class="content-header">Leaderboard</p>
+      
+    </div>
+          <div>
+            <p class="content-description">Compete with the world to be the smartest gamer. Who is the best at managing their gaming time. </p>
+          </div>
+    </div>
+  </div>
+  <div class="feature-card">
+      <%= image_tag "followers-feature.png" %>
+      <div class="content">
+        <div>
+          <p class="content-header">Followers</p>
+      
+    </div>
+          <div>
+            <p class="content-description">Follow your friends, and share how much time you spend playing games.</p>
+          </div>
+    </div>
+  </div>
+  <%= link_to 'Try it now!', '/auth/steam', class: "btn btn-outline btn-xl page-scroll", id:"feature-button" %>
+
+</div>
 </section>
+
+
