--- a/app/views/new_age/_download.html.erb
+++ b/app/views/new_age/_download.html.erb
@@ -22,7 +22,7 @@
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h3 class="service-heading" id="service-head-text">Step 2</h4>
-            <p>Schedule and choose your desired playtime for the day/week.</p>
+            <p>Schedule and choose your desired playtime for the day.</p>
           </div>  
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
