standard image size for user avatar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -138,7 +138,7 @@
 							<tr>
 								<td>
 									<%= link_to user_path(user), target: "_self" do %>
-										<%= image_tag user.avatar_url, title: user.nickname, class: "avatar-small" %> <%= user.nickname %>
+										<%= image_tag user.avatar_url, title: user.nickname, size: "50", class: "avatar-small" %> <%= user.nickname %>
 									<% end %>
 								</td>
 								<% user_playtimes = user.playtimes %>
