--- a/app/views/layouts/new_age.html.erb
+++ b/app/views/layouts/new_age.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsStartbootstrapNewAge</title>
+  <title>SmartGamer</title>
   <%= stylesheet_link_tag 'new_age/manifest.css', media: 'all' %>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
